# fixed-asset-api

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Readme.md  check_all_tables.py  check_cycle.py  check_db.py  db.py  db_base.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  quick_check.py  reset_db.py  seed_database.py  seed_database_full.py  seed_mock_data.py  setup.py  v2_report.md
.claude/: settings.local.json
.github/workflows/: deploy.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_table.py
api/auth/: __init__.py  models.py  views.py
api/cycles/: db_manager.py  models.py  queries.py  views.py
api/dashboard/: __init__.py  db_manager.py  models.py  queries.py  views.py
api/verification/: db_manager.py  models.py  queries.py  views.py
config/: __init__.py  database.py  dev.py  local.py  prod.py  stage.py  test.py
core/: __init__.py  deps.py  security.py
data/: sample_assets.csv
db_models/: __init__.py  asset.py  asset_verification.py  user.py  verification_cycle.py
deploy/: README.md  cloudformation.yaml  create-project-skeleton.ps1  ec2-deploy.sh  set-github-secrets.ps1  set-github-secrets.sh
deploy/aws/: ec2-userdata.sh  iam-policies.json  setup-aws.sh  trust-policy.json
documentation/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  SETUP_TO_DEPLOYMENT_GUIDE.md  seed_data.md
prompts/: full_app_prompt.md
tests/: conftest.py  test_auth.py  test_endpoints.py
