[tool.poetry]
name = "fixed-asset-api"
version = "0.1.0"
description = "Fixed Asset Management API"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
pydantic = ">=2.0.0"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
